Changes in version 1.0-20:

* Added bootstrap= option to yai() so that reference observations can 
be sampled with replacement forming a bootstrap rep.
* Added function mergeReps() to merge a list of bootstrap reps into
one yai object. 
* Modified some help files to improve acknowledgements and cross references.
* Fixed a small typographical error in the help for correctBias, accomplished 
minor edits to other help files. 
* Added the ability to specify k in function newtargets (how did I miss that?).
* Added function applyMask that removes (or keeps) reference neighbors that share 
group membership with a target. Thanks to Clara Antón Fernández for suggestions that
lead to this function being added.

Changes in version 1.0-19:

* Moved COPYRIGHTS to inst/COPYRIGHTS and greatly added detailed information 
to the file.
* Modified DESCRIPTION to note contribution of the authors of ANN (as per 
CRAN policy).
* Added a Copyright statement to DESCRIPTION.  
* Added detail to the Description statement in file DESCRIPTION.
* Fixed print.yai.R error when there is only one target and K>1.
* Modified the file handling in AsciiGridPredict (and AsciiGridImpute).
* Fixed a case where a reference picks itself as the second most similar neighbor. This only
happens when there are two or more identical reference observations (thanks to Petteri Packalen).
* Further revision to the ftest to deal with degenerate cases and put in a trap on the use
of method="msn2" when there are too few observations.

Changes in version 1.0-18:

* Added a function (notablyDifferent) to use a consistent method to identify 
observations with large error. 
* Added an function to (plot.notablyDifferent) to plot the data from notablyDifferent().
* Modified the ftest in yai() so that it correctly computes the number of canonical variates.

Changes in version 1.0-17:

* Replaced deprecated calls to sd(<matrix>|<data.frame>) and mean(<matrix>|<data.frame>) with apply().